<resources>
    <string-array name="translation_effect">
        <item>推压</item>
        <item>内转</item>
        <item>外转</item>
        <item>景深</item>
        <item>平翻</item>
        <item>竖翻</item>
        <item>顺旋</item>
        <item>逆旋</item>
        <item>拉进</item>
        <item>标准</item>
        <item>方块</item>
        <item>放大</item>
        <item>缩小</item>
    </string-array>
    <string name="app_name">一日三餐</string>
    <string name="record_breakfast_hint">早餐消费</string>
    <string name="record_lunch_hint">午餐消费</string>
    <string name="record_dinner_hint">晚餐消费</string>
    <string name="record_others_hint">其它消费</string>
    <string name="record_breakfast_label">早餐</string>
    <string name="record_lunch_label">午餐</string>
    <string name="record_dinner_label">晚餐</string>
    <string name="record_others_label">其它</string>
    <string name="record_totalToday_label">总计</string>
    <string name="record_list_item_totalTodayText">当日总计</string>
    <string name="record_list_item_dateText">当日日期</string>
    <string name="save_record">保存</string>
    <string name="delete_record">删除</string>
    <string name="record_list_title">记录列表</string>
    <string name="empty_text">没有记录!</string>
    <string name="total_month_title">合计</string>
    <string name="chart">图表</string>
    <string name="title_page0">今日</string>
    <string name="title_page1">列表</string>
    <string name="title_page2">合计</string>
    <string name="saved_toast">已保存!</string>
    <string name="user">彭侦</string>
    <string name="navi_item0">本月消费图表</string>
    <string name="navi_item1">10月消费图表</string>
    <string name="navi_item2">9月消费图表</string>
    <string name="navi_item3">8月消费图表</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="background">背景</string>
    <string name="animation">切换效果</string>
    <string name="navi_open">opened</string>
    <string name="navi_close">closed</string>
    <string name="animation_dialog_cancel">取消</string>
    <string name="animation_dialog_ok">确认</string>
    <string name="swipe_image">删除图标</string>
    <string name="swipe_text">删除记录？</string>
    <string name="swipe_button">删除</string>
</resources>
