<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chart0"
            android:title="@string/navi_item0"/>
        <item
            android:id="@+id/chart1"
            android:title="@string/navi_item1"/>
        <item
            android:id="@+id/chart2"
            android:title="@string/navi_item2"/>
        <item
            android:id="@+id/chart3"
            android:title="@string/navi_item3"/>
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/navi_item_theme"
                android:title="@string/theme"/>
            <item
                android:id="@+id/navi_item_animation"
                android:title="@string/animation"/>
            <item
                android:id="@+id/navi_item_background"
                android:title="@string/background"/>
        </menu>
    </item>

</menu>