<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5534"
        android:gravity="center"
        android:weightSum="10">

        <ImageView
            android:id="@+id/trash"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/swipe_image"
            android:src="@drawable/trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/swipe_text"
            android:textColor="#fff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/white"
            android:text="@string/swipe_button"
            android:textColor="#FF5534" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_activated">

        <TextView
            android:id="@+id/record_list_item_dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/record_list_item_dateText"
            />
        <TextView
            android:id="@+id/record_list_item_totalTodayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/record_list_item_dateTextView"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/record_list_item_totalTodayText"
            />
    </RelativeLayout>
</com.daimajia.swipe.SwipeLayout>
